--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.32.0
-pandas==2.0.3
+streamlit
+yfinance
+pandas
 numpy==1.24.3
-yfinance==0.2.36
-beautifulsoup4==4.12.2
-lxml==4.9.3
-requests==2.31.0
-python-dateutil==2.8.2
-pytz==2024.1 
+pandas_ta
+requests
+beautifulsoup4
+tqdm
+nsetools
+ta-lib==0.4.0
